syntax = "proto3";

option go_package ="github.com/sehogas/go_codes/grpc/proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    // Sends another greeting
    rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}
    // Send many regards
    rpc SayReguards (HelloRequest) returns (ListRegardsResponse) {}
  }

  enum Language {
    ENGLISH = 0;
    SPANISH = 1;
  }

  // The request message containing the user's name.
  message HelloRequest {
    string name = 1;
    Language language = 2;
  }
  
  // The response message containing the greetings
  message HelloResponse {
    string message = 1;
    Language language = 2;
  }
  
  message ListRegardsResponse {
    repeated HelloResponse items = 1;
  }